--- a/www/css/mission-control.css
+++ b/www/css/mission-control.css
@@ -33,7 +33,7 @@ table {
 
 #consoleArea {
 	font-family: "Lucida Console", Monaco, monospace;
-	background-color: #e2e2e2;
+	background-color: #FFF;
 }
 
 #videoBackground {
