--- a/www/css/mission-control.css
+++ b/www/css/mission-control.css
@@ -32,11 +32,15 @@ table {
 }
 
 #consoleArea {
+    display: inline-block;
 	font-family: "Lucida Console", Monaco, monospace;
 	background-color: #FFF;
+    width: 100%;
+    max-height: 100%;
+    overflow: auto;
 }
 
 #videoBackground {
 	background-size: cover;
-	width: 300px;
+	width: 320px;
 }
