--- a/www/css/blockly.css
+++ b/www/css/blockly.css
@@ -122,7 +122,7 @@
   padding: 0;
 }
 .blocklyCommentTextarea {
-  background-color: #ffc;
+  background-color: #f0c;
   border: 0;
   margin: 0;
   padding: 2px;
