--- a/www/css/mission-control.css
+++ b/www/css/mission-control.css
@@ -32,14 +32,14 @@ table {
 }
 
 #consoleArea {
-    display: fixed;
-    margin-top: -20px;
+	display: fixed;
+	margin-top: -20px;
 	font-family: "Lucida Console", Monaco, monospace;
 	background-color: #FFF;
-    width: 100%;
-    max-height: 100%;
-    overflow: auto;
-    padding: 0 0 0 0;
+	width: 100%;
+	max-height: 100%;
+	overflow: auto;
+	padding: 0 0 0 0;
 }
 
 #consoleArea p:nth-child(odd) {
@@ -52,10 +52,24 @@ table {
 }
 
 #videoBackground {
-    background-color: #f6e9fc;
-    text-align: center;
-    color: #888;
-    width: 320px;
+		background-color: white;
+		background-size: contain;
+		text-align: center;
+		color: #888;
+		width: 320px;
+}
+
+.well {
+	box-shadow: inset 0 0 5px #555;
+}
+
+.indicator {
+	display: block;
+	margin: 0 auto;
+	border-radius: 25px;
+	width: 50px;
+	height: 50px;
+	background-color: #BBBBBB;
 }
 
 ::-webkit-scrollbar {
